tests/paczka1/fuzzy1/66744717.err
Error in line 1: 0e5C5iA7sC A789 24,9
Error in line 6: mZB A96 20,5
Error in line 14: mZB S961 76,0
Error in line 22: 0e5C5iA7sC A789 48,2
Error in line 21: mZB A789 96,1
Error in line 29: ncJK S961 74,5
Error in line 32: 7dU1 S|61 76,5
Error in line 38: 6tQVPOCtnR A646 42,5
